final style fixes, layout shift fix

--- a/src/styles/overlay.css
+++ b/src/styles/overlay.css
@@ -208,7 +208,11 @@ select {
   cursor: pointer;
 }
 
-#name-input,
+#name-input {
+  z-index: 3;
+}
+
+#sis-id-input,
 #section-input {
   z-index: 2;
 }
